# qwendean

./: .gitignore  LICENSE  README.md  bundling-plan.md
.github/workflows/: release.yml
academic/paper/conference/: paper.tex
academic/paper/preprint/: sn-article.tex
academic/training/: qwendean3_4b_training.ipynb  qwendean3_4b_training.py
apps/: README.md
apps/agents/: .env.example  .gitignore  config.py  graph.py  llm_client.py  main.py  pyproject.toml  state.py
apps/agents/nodes/: code_generator.py  intake.py  page_assembler.py  questionnaire.py  section_planner.py
apps/agents/prompts/: __init__.py  templates.py
apps/backend/: .env.example  README.md  pyproject.toml
apps/backend/langgraph_app/: config.py  llm_client.py  state.py
apps/backend/langgraph_app/nodes/: section_planner.py
apps/backend/langgraph_app/prompts/: templates.py
apps/backend/nodes/: page_assembler.py
apps/electron/: .gitignore  forge.config.ts  package-lock.json  package.json  vite.main.config.mts
apps/electron/src/: global.d.ts  main.ts  preload.ts  routeTree.gen.ts
apps/electron/src/actions/: theme.ts
apps/electron/src/components/: chat-sidebar.tsx  main-content.tsx  navigation-menu.tsx  plan-editor.tsx  preview-window.tsx  site-header.tsx
apps/frontend/: README.md
apps/frontend/app/: page.tsx
apps/frontend/components/: chat-sidebar.tsx  main-content.tsx
apps/toolkit/: .gitignore  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  workflow.md
apps/toolkit/app/: layout.tsx  page.tsx
apps/toolkit/hooks/: use-scroll.ts
(+76 files in other folders)
