[project]
name = "qwendean-backend"
version = "0.1.0"
description = "FastAPI backend with LangGraph landing page generator"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "aiohttp>=3.13.3",
    "httpx>=0.27.0",
    "langchain>=0.3.25",
    "langchain-huggingface>=0.1.2",
    "langchain-ollama>=0.2.0",
    "langgraph>=0.4.1",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
dev = "uvicorn main:app --reload --host 0.0.0.0 --port 8000"
start = "uvicorn main:app --host 0.0.0.0 --port 8000"

[tool.scripts]
build = "pyinstaller agents.spec --distpath dist --workpath build/pyinstaller --clean"
